@@ -10,6 +10,8 @@ Bug fixes:
 - Fixed bug on open ended recurrent event (s/expand/extend/).
 - Fixed broken links for calendar info view.
 - Main view redirect to last view now preserves portal_status_message.
+- All the IDate objects now have a getCalendarUrl method, mainly used
+  for actions in CMF that should only be done on the calendar.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
